--- a/css/layout/header.less
+++ b/css/layout/header.less
@@ -405,6 +405,10 @@ header#main-header{
         margin-right: -15px;
         width: 100%;
 
+        @media (max-width: 1200px) {
+          display: none;
+        }
+
         .lh-box-shadow(0 0 30px rgba(0, 0, 0, .25));
 
         .link-wrapper {
