--- a/css/layout/sidebar.less
+++ b/css/layout/sidebar.less
@@ -124,6 +124,16 @@ nav#main-sidebar-nav{
       //min-width: 320px;
 
       .lh-box-shadow(0 0 40px rgba(0,0,0,.5));
+      .lh-filter(grayscale(50%));
+    }
+
+    #page-overlay{
+      background: fadeOut(gray, 75%);
+      margin-left: 260px;
+      position: fixed;
+      height: 100%;
+      width: 100%;
+      z-index: 2000;
     }
   }
 }
