--- a/css/article/article.css
+++ b/css/article/article.css
@@ -1,5 +1,10 @@
 #article .article {
+  text-indent: .6rem;
   font-family: Georgia;
+  line-height: 125%;
   font-size: 1.4rem;
   padding: 40px;
+}
+#article .article p {
+  padding: 10px 0;
 }
