--- a/css/article/article.less
+++ b/css/article/article.less
@@ -1,7 +1,13 @@
 #article{
   .article{
+    text-indent: .6rem;
     font-family: Georgia;
+    line-height: 125%;
     font-size: 1.4rem;
     padding: 40px;
+
+    p{
+      padding: 10px 0;
+    }
   }
 }
