--- a/css/article/top.less
+++ b/css/article/top.less
@@ -5,6 +5,7 @@
   .navhead{
     background: #fafafa;
     color: #333;
+    border-bottom: 1px solid #eee;
     font-size: 1.4rem;
     padding: 20px;
   }
