--- a/css/index.css
+++ b/css/index.css
@@ -2,13 +2,38 @@
   width: 100%;
   height: 60vh;
   margin: 20px auto;
+  overflow: hidden;
 }
 @media (max-width: 401px) {
+  .swiper-container {
+    margin: 20px -15px 20px -15px !important;
+    width: 100vw;
+  }
   .swiper-container .swiper-button-next {
-    right: 0;
+    opacity: .3;
+    right: -15px;
+    -webkit-transition: right ease 0.3s, opacity ease 0.3s;
+    -moz-transition: right ease 0.3s, opacity ease 0.3s;
+    -o-transition: right ease 0.3s, opacity ease 0.3s;
+    transition: right ease 0.3s, opacity ease 0.3s;
   }
   .swiper-container .swiper-button-prev {
-    left: 0;
+    opacity: .3;
+    left: -15px;
+    -webkit-transition: left ease 0.3s, opacity ease 0.3s;
+    -moz-transition: left ease 0.3s, opacity ease 0.3s;
+    -o-transition: left ease 0.3s, opacity ease 0.3s;
+    transition: left ease 0.3s, opacity ease 0.3s;
+  }
+  .swiper-container:hover .swiper-button-next,
+  .swiper-container:active .swiper-button-next {
+    opacity: 1;
+    right: 10px;
+  }
+  .swiper-container:hover .swiper-button-prev,
+  .swiper-container:active .swiper-button-prev {
+    opacity: 1;
+    left: 10px;
   }
 }
 .swiper-slide {
@@ -52,7 +77,8 @@
 }
 @media (max-width: 401px) {
   .swiper-slide {
-    padding: 10px 0;
+    padding: 10px 15px 50px 15px;
+    overflow-y: scroll;
   }
   .swiper-slide h3 {
     color: #1d3d86;
@@ -446,6 +472,20 @@ div#featured-links div.featured-link .overlay:hover {
   background: #eee;
   margin-top: 10px;
   padding: 10px;
+}
+@media (max-width: 700px) {
+  #main-news article .content footer.article-footer {
+    text-indent: 0;
+  }
+}
+#main-news article .content footer.article-footer .mobile-date {
+  color: #555;
+  float: right;
+}
+@media (min-width: 701px) {
+  #main-news article .content footer.article-footer .mobile-date {
+    display: none;
+  }
 }
 #main-news article:after {
   clear: both;
