--- a/css/index/slider.less
+++ b/css/index/slider.less
@@ -2,14 +2,37 @@
   width: 100%;
   height: 60vh;
   margin: 20px auto;
+  overflow: hidden;
 
   @media (max-width: 401px) {
+    //height: 85vh;
+    margin: 20px -15px 20px -15px !important;
+    width: 100vw;
+
     .swiper-button-next{
-      right: 0;
+      opacity: .3;
+      right: -15px;
+
+      .lh-transition(right ease .3s, opacity ease .3s);
     }
 
     .swiper-button-prev{
-      left: 0;
+      opacity: .3;
+      left: -15px;
+
+      .lh-transition(left ease .3s, opacity ease .3s);
+    }
+
+    &:hover, &:active{
+      .swiper-button-next{
+        opacity: 1;
+        right: 10px;
+      }
+
+      .swiper-button-prev{
+        opacity: 1;
+        left: 10px;
+      }
     }
   }
 }
@@ -48,7 +71,8 @@
   }
 
   @media (max-width: 401px) {
-    padding: 10px 0;
+    padding: 10px 15px 50px 15px;
+    overflow-y: scroll;
 
     h3{
       color: @main;
