--- a/css/layout.css
+++ b/css/layout.css
@@ -186,11 +186,29 @@ header#main-header nav#main-header-nav .header-nav-list > li.parent.active .nest
   display: block;
 }
 header#main-header nav#main-header-nav #header-nav-open-button-wrap {
+  position: relative;
   float: left;
-  padding: .8rem 20px .8rem 0;
+  padding: .8rem 0 .8rem 20px;
+  z-index: 10;
 }
 @media (min-width: 701px) {
   header#main-header nav#main-header-nav #header-nav-open-button-wrap {
+    display: none;
+  }
+}
+header#main-header nav#main-header-nav #header-nav-small-logo {
+  background: url("/images/logos/only-name.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  position: absolute;
+  float: left;
+  margin: .8rem 0 .8rem 0;
+  height: 30px;
+  width: 100%;
+}
+@media (min-width: 701px) {
+  header#main-header nav#main-header-nav #header-nav-small-logo {
     display: none;
   }
 }
@@ -200,8 +218,7 @@ header#main-header nav#main-header-nav #header-nav-open-button {
   cursor: pointer;
   position: relative;
   float: left;
-  padding: .4rem .7rem;
-  margin-left: .7rem;
+  padding: .4rem 1rem;
   -webkit-border-radius: 5px;
   -webkit-background-clip: padding-box;
   -moz-border-radius: 5px;
@@ -213,6 +230,8 @@ header#main-header nav#main-header-nav #header-search {
   color: #fff;
   float: right;
   font-size: 1.6rem;
+  position: relative;
+  z-index: 10;
 }
 @media (max-width: 700px) {
   header#main-header nav#main-header-nav #header-search {
@@ -221,7 +240,8 @@ header#main-header nav#main-header-nav #header-search {
 }
 header#main-header nav#main-header-nav #header-search i {
   padding: 16px 0 17px 0;
-  margin-left: -40px;
+  position: absolute;
+  right: 16px;
 }
 header#main-header nav#main-header-nav #header-search-input {
   background: bottom left linear-gradient(#ffffff, #ffffff) no-repeat, bottom center linear-gradient(#ffffff, #ffffff) repeat-x, bottom right linear-gradient(#ffffff, #ffffff) no-repeat;
@@ -245,6 +265,8 @@ header#main-header nav#main-header-nav #header-search-input:focus {
 header#main-header nav#main-header-nav #main-header-modes {
   float: right;
   padding: .8rem 20px .8rem 0;
+  position: relative;
+  z-index: 10;
 }
 header#main-header nav#main-header-nav #main-header-modes .mode {
   border: 1px solid #fff;
@@ -347,7 +369,12 @@ header#main-header.full div#main-header-landing .container p {
   text-align: center;
   padding: 1rem 0;
   margin: 0 auto;
-  width: 50%;
+  width: 80%;
+}
+@media (min-width: 992px) {
+  header#main-header.full div#main-header-landing .container p {
+    width: 50%;
+  }
 }
 header#main-header.full div#main-header-landing .container .button-wrapper {
   text-align: center;
@@ -514,7 +541,7 @@ aside#sidebar {
 aside#sidebar #main-sidebar-search {
   background: #1d3d86;
   color: #fff;
-  height: 60px;
+  height: 56px;
   -webkit-box-shadow: inset 0 -3px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: inset 0 -3px rgba(0, 0, 0, 0.5);
   box-shadow: inset 0 -3px rgba(0, 0, 0, 0.5);
@@ -663,12 +690,525 @@ footer#main-footer .col img {
   padding-top: 20px;
 }
 footer#main-footer #footer-map {
+  background: url('/images/map.png') center no-repeat;
+  height: 60vh;
+  overflow: hidden;
+  /*margin-left: -15px;
+    margin-right: -15px;*/
+  width: 100%;
+}
+footer#main-footer #footer-map #footer-map-overlay {
+  background: rgba(29, 61, 134, 0.5);
+  padding-top: 25vh;
   height: 60vh;
   width: 100%;
+}
+footer#main-footer #footer-map #footer-map-popup {
+  background: #fff;
+  color: #333;
+  font-size: 1.6rem;
+  margin: 0 auto;
+  padding: 20px;
+  width: 300px;
+  -webkit-box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
+}
+footer#main-footer #footer-map #footer-map-popup:before {
+  content: '';
+  display: block;
+  position: absolute;
+  margin: -20px 0 0 -44px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 46px 24px 46px 0;
+  border-color: transparent #ffffff transparent transparent;
+  -webkit-transform: rotate(360deg);
 }
 #lord-wrap {
   overflow: hidden;
 }
 #page {
   overflow: hidden;
+}
+.biw {
+  font-size: 20px;
+  font-weight: bold !important;
+}
+.biw * {
+  background-image: none !important;
+}
+.biw header#main-header {
+  background: #fff;
+}
+.biw header#main-header #header-nav-bg-wrapper {
+  display: none;
+}
+.biw header#main-header nav#main-header-nav {
+  background: #fff;
+}
+.biw header#main-header nav#main-header-nav #top-logo {
+  display: none;
+}
+.biw header#main-header nav#main-header-nav .header-nav-list {
+  color: #000;
+}
+.biw header#main-header nav#main-header-nav .header-nav-list > li.parent:hover,
+.biw header#main-header nav#main-header-nav .header-nav-list > li.parent.active {
+  background: #fff;
+  color: #000;
+}
+.biw header#main-header nav#main-header-nav .header-nav-list > li:hover,
+.biw header#main-header nav#main-header-nav .header-nav-list > li.active {
+  background: #fff;
+}
+.biw header#main-header nav#main-header-nav .header-nav-list > li:hover > a,
+.biw header#main-header nav#main-header-nav .header-nav-list > li.active > a {
+  color: #000;
+}
+.biw header#main-header nav#main-header-nav .header-nav-list > li > a {
+  color: #000;
+}
+.biw header#main-header nav#main-header-nav .header-nav-list > li > a:hover {
+  text-decoration: none;
+}
+.biw header#main-header nav#main-header-nav .header-nav-list > li > a:hover .borderland {
+  border-bottom: none;
+}
+.biw header#main-header nav#main-header-nav .header-nav-list > li > a.active .borderland {
+  border-bottom: none;
+}
+.biw header#main-header nav#main-header-nav .header-nav-list > li > a .borderland {
+  border-bottom: 3px solid #000;
+}
+.biw header#main-header nav#main-header-nav .header-nav-list > li .nesting-menu-wrapper {
+  display: none;
+  left: 0;
+  position: absolute;
+  min-height: 400px;
+  clip: rect(auto, auto, 1000px, auto);
+  width: 100%;
+}
+.biw header#main-header nav#main-header-nav .header-nav-list > li .nesting-menu-wrapper .nesting-menu {
+  background: #fff;
+  min-height: 300px;
+  padding: 0;
+  overflow: hidden;
+  max-height: 80vh;
+  -webkit-border-bottom-left-radius: 2px;
+  -moz-border-radius-bottomleft: 2px;
+  border-bottom-left-radius: 2px;
+  -webkit-border-bottom-right-radius: 2px;
+  -webkit-background-clip: padding-box;
+  -moz-border-radius-bottomright: 2px;
+  -moz-background-clip: padding;
+  border-bottom-right-radius: 2px;
+  background-clip: padding-box;
+  -webkit-box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.3), 0 2px 2px 0 rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.3), 0 2px 2px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.3), 0 2px 2px 0 rgba(0, 0, 0, 0.2);
+}
+.biw header#main-header nav#main-header-nav .header-nav-list > li .nesting-menu-wrapper .nesting-menu ul.lvl-1 {
+  background: #eee;
+  padding: .3rem 0;
+  float: left;
+  overflow-y: scroll;
+  position: relative;
+  height: 100%;
+  max-height: 80vh;
+  max-width: 20%;
+}
+.biw header#main-header nav#main-header-nav .header-nav-list > li .nesting-menu-wrapper .nesting-menu ul.lvl-1 li {
+  color: #1d3d86;
+  display: block;
+  position: relative;
+  padding: .7rem 1rem;
+}
+.biw header#main-header nav#main-header-nav .header-nav-list > li .nesting-menu-wrapper .nesting-menu ul.lvl-1 li:hover {
+  background: #fff;
+  z-index: 5;
+}
+.biw header#main-header nav#main-header-nav .header-nav-list > li .nesting-menu-wrapper .nesting-menu ul.lvl-1 li ul.lvl-2 {
+  display: none;
+}
+.biw header#main-header nav#main-header-nav .header-nav-list > li .nesting-menu-wrapper .nesting-menu .nesting-sub {
+  margin-left: 20%;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  position: relative;
+  max-height: 80vh;
+  width: 80%;
+  -webkit-box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.1);
+}
+.biw header#main-header nav#main-header-nav .header-nav-list > li .nesting-menu-wrapper .nesting-menu .nesting-sub .default-message {
+  color: #1d3d86;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+  text-align: center;
+  height: 460px;
+}
+.biw header#main-header nav#main-header-nav .header-nav-list > li .nesting-menu-wrapper .nesting-menu .nesting-sub .nested-sub-block {
+  position: absolute;
+  height: 100%;
+}
+.biw header#main-header nav#main-header-nav .header-nav-list > li .nesting-menu-wrapper .nesting-menu .nesting-sub .lvl-2-full {
+  padding: .3rem 0;
+}
+.biw header#main-header nav#main-header-nav .header-nav-list > li .nesting-menu-wrapper .nesting-menu .nesting-sub .lvl-2-full li {
+  color: #1d3d86;
+  display: block;
+  position: relative;
+  padding: .7rem 1rem;
+}
+.biw header#main-header nav#main-header-nav .header-nav-list > li .nesting-menu-wrapper .nesting-menu .nesting-sub .lvl-2-full li:hover {
+  background: #fff;
+  z-index: 5;
+}
+.biw header#main-header nav#main-header-nav #header-nav-open-button-wrap {
+  position: relative;
+  float: left;
+  padding: .8rem 0 .8rem 20px;
+  z-index: 10;
+}
+@media (min-width: 701px) {
+  .biw header#main-header nav#main-header-nav #header-nav-open-button-wrap {
+    display: none;
+  }
+}
+.biw header#main-header nav#main-header-nav #header-nav-small-logo {
+  display: none;
+}
+.biw header#main-header nav#main-header-nav #header-nav-open-button {
+  border: 1px solid #000;
+  color: #000;
+  cursor: pointer;
+  position: relative;
+  float: left;
+  padding: .4rem 1rem;
+  -webkit-border-radius: 5px;
+  -webkit-background-clip: padding-box;
+  -moz-border-radius: 5px;
+  -moz-background-clip: padding;
+  border-radius: 5px;
+  background-clip: padding-box;
+}
+.biw header#main-header nav#main-header-nav #header-search {
+  color: #000;
+  float: right;
+  font-size: 1.6rem;
+  position: relative;
+  z-index: 10;
+}
+@media (max-width: 700px) {
+  .biw header#main-header nav#main-header-nav #header-search {
+    display: none;
+  }
+}
+.biw header#main-header nav#main-header-nav #header-search i {
+  padding: 16px 0 17px 0;
+  position: absolute;
+  right: 16px;
+}
+.biw header#main-header nav#main-header-nav #header-search-input {
+  background: bottom left linear-gradient(#ffffff, #ffffff) no-repeat, bottom center linear-gradient(#ffffff, #ffffff) repeat-x, bottom right linear-gradient(#ffffff, #ffffff) no-repeat;
+  background-size: 1px 6px, 1px 1px, 1px 6px;
+  border: none;
+  border-bottom: 2px solid #000;
+  font-size: 17px;
+  padding: 20px 60px 15px 20px;
+  width: 240px;
+}
+.biw header#main-header nav#main-header-nav #header-search-input:focus {
+  outline: none;
+  background: bottom left linear-gradient(#ed7d1c, #ed7d1c) no-repeat, bottom center linear-gradient(#ed7d1c, #ed7d1c) repeat-x, bottom right linear-gradient(#ed7d1c, #ed7d1c) no-repeat;
+  border-bottom: 2px solid #ED7D1C;
+}
+@media screen and (max-width: 1200px) {
+  .biw header#main-header nav#main-header-nav #header-search-input {
+    display: none;
+  }
+}
+.biw header#main-header nav#main-header-nav #main-header-modes .mode {
+  border: 1px solid #000;
+  color: #000;
+}
+.biw header#main-header nav#main-header-nav #main-header-modes .mode:hover {
+  background-color: #000;
+  color: #fff;
+}
+.biw header#main-header nav#main-header-nav #main-header-modes .mode.active ul {
+  display: block;
+}
+.biw header#main-header nav#main-header-nav #main-header-modes .mode ul {
+  background-color: #fff;
+  border: 1px solid #fff;
+  display: none;
+  color: #1d3d86;
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  -webkit-border-radius: 5px;
+  -webkit-background-clip: padding-box;
+  -moz-border-radius: 5px;
+  -moz-background-clip: padding;
+  border-radius: 5px;
+  background-clip: padding-box;
+}
+.biw header#main-header nav#main-header-nav #main-header-modes .mode ul li {
+  padding: .4rem .7rem;
+}
+.biw header#main-header nav#main-header-nav #main-header-modes .mode ul li:first-child {
+  -webkit-border-top-left-radius: 5px;
+  -moz-border-radius-topleft: 5px;
+  border-top-left-radius: 5px;
+  -webkit-border-top-right-radius: 5px;
+  -webkit-background-clip: padding-box;
+  -moz-border-radius-topright: 5px;
+  -moz-background-clip: padding;
+  border-top-right-radius: 5px;
+  background-clip: padding-box;
+}
+.biw header#main-header nav#main-header-nav #main-header-modes .mode ul li:last-child {
+  -webkit-border-bottom-left-radius: 5px;
+  -moz-border-radius-bottomleft: 5px;
+  border-bottom-left-radius: 5px;
+  -webkit-border-bottom-right-radius: 5px;
+  -webkit-background-clip: padding-box;
+  -moz-border-radius-bottomright: 5px;
+  -moz-background-clip: padding;
+  border-bottom-right-radius: 5px;
+  background-clip: padding-box;
+}
+.biw header#main-header nav#main-header-nav #main-header-modes .mode ul li:hover {
+  background-color: #1d3d86;
+  color: #fff;
+}
+.biw header#main-header.full div#main-header-landing {
+  height: 100vh;
+}
+.biw header#main-header.full div#main-header-landing .container {
+  color: #000;
+  text-shadow: none;
+}
+.biw header#main-header.full div#main-header-landing #main-heder-quicklinks {
+  background: #fff;
+  bottom: 0;
+  color: #000;
+  font-size: 1.6rem;
+  text-shadow: none;
+  position: absolute;
+  padding: 0 20px;
+  margin-left: -15px;
+  margin-right: -15px;
+  width: 100%;
+  -webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0 0 30px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.25);
+}
+@media (max-width: 1200px) {
+  .biw header#main-header.full div#main-header-landing #main-heder-quicklinks {
+    display: none;
+  }
+}
+.biw header#main-header.full div#main-header-landing #main-heder-quicklinks .link-wrapper {
+  display: block;
+  float: left;
+  padding: 10px 0;
+  font-weight: 100;
+}
+.biw header#main-header.full div#main-header-landing #main-heder-quicklinks .link-wrapper .link {
+  border-right: 1px solid #eee;
+  padding: 20px;
+}
+.biw header#main-header.full div#main-header-landing #main-heder-quicklinks .link-wrapper:hover {
+  background: #fafafa;
+}
+.biw header#main-header.full div#main-header-landing #main-heder-quicklinks .link-wrapper:last-child .link {
+  border-right: none;
+}
+.biw header#main-header.full div#main-header-landing #main-heder-quicklinks .arrow-continue-wrapper {
+  display: block;
+  padding: 10px 0;
+  float: right;
+  font-weight: 100;
+}
+.biw header#main-header.full div#main-header-landing #main-heder-quicklinks .arrow-continue-wrapper .arrow-continue {
+  padding: 20px;
+}
+.biw header#main-header.full div#main-header-landing #main-heder-quicklinks .arrow-continue-wrapper .arrow-continue .fa {
+  margin-left: 20px;
+}
+.biw header#main-header.full div#main-header-landing #main-heder-quicklinks .arrow-continue-wrapper:hover {
+  background: #fafafa;
+}
+.biw header#main-header.full #header-main-logo {
+  background-image: url("/images/logos/full.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: block;
+  margin: 40px auto;
+  height: 30vh;
+}
+.biw header#main-header.small {
+  overflow: hidden;
+  height: 240px;
+}
+.biw header#main-header.small #main-header-nav-bg {
+  height: 240px;
+}
+.biw header#main-header.small div#main-header-landing {
+  height: 240px;
+}
+.biw header#main-header.small div#main-header-landing .container {
+  color: #fff;
+  text-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
+  position: relative;
+  padding-top: 84px;
+  height: 240px;
+  z-index: 2;
+}
+.biw header#main-header.small div#main-header-landing .container h1 {
+  font-size: 2rem;
+  font-weight: 300;
+  padding: 2rem 0 .6rem 200px;
+}
+.biw header#main-header.small div#main-header-landing .container h2 {
+  display: none;
+}
+.biw header#main-header.small div#main-header-landing .container p {
+  padding: 0 0 0 200px;
+}
+.biw header#main-header.small div#main-header-landing #main-heder-quicklinks {
+  display: none;
+}
+.biw header#main-header.small #header-main-logo {
+  display: none;
+}
+.biw header#main-header .gradient {
+  display: none;
+}
+.biw footer#main-footer {
+  background: #fff;
+  color: #000;
+}
+.biw footer#main-footer a {
+  color: #000;
+}
+.biw footer#main-footer a:hover {
+  color: #000;
+}
+.biw footer#main-footer .col .footer-social-links a.social-link {
+  color: #000;
+  display: inline-block;
+  padding: 1rem;
+  text-align: center;
+  height: 4rem;
+  width: 4rem;
+}
+.biw footer#main-footer .col .footer-social-links a.social-link:hover {
+  background: #fff;
+  color: #000;
+}
+.biw footer#main-footer #footer-map {
+  background: url('/images/map.png') center no-repeat;
+  height: 60vh;
+  overflow: hidden;
+  /*margin-left: -15px;
+    margin-right: -15px;*/
+  width: 100%;
+}
+.biw footer#main-footer #footer-map #footer-map-overlay {
+  background: rgba(29, 61, 134, 0.5);
+  padding-top: 25vh;
+  height: 60vh;
+  width: 100%;
+}
+.biw footer#main-footer #footer-map #footer-map-popup {
+  background: #fff;
+  color: #333;
+  font-size: 1.6rem;
+  margin: 0 auto;
+  padding: 20px;
+  width: 300px;
+  -webkit-box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
+}
+.biw footer#main-footer #footer-map #footer-map-popup:before {
+  content: '';
+  display: block;
+  position: absolute;
+  margin: -20px 0 0 -44px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 46px 24px 46px 0;
+  border-color: transparent #ffffff transparent transparent;
+  -webkit-transform: rotate(360deg);
+}
+.biw aside#sidebar {
+  background: #fff;
+}
+.biw aside#sidebar #main-sidebar-search {
+  background: #fff;
+  color: #000;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
+.biw nav#main-sidebar-nav .sidebar-nav-list {
+  color: #000;
+}
+.biw nav#main-sidebar-nav .sidebar-nav-list a {
+  color: #000;
+}
+.biw nav#main-sidebar-nav .sidebar-nav-list > li {
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+}
+.biw nav#main-sidebar-nav .sidebar-nav-list > li:hover {
+  background: #fff;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+}
+.biw nav#main-sidebar-nav .sidebar-nav-list > li > a {
+  display: block;
+  padding: 14px 20px;
+}
+.biw nav#main-sidebar-nav .sidebar-nav-list > li > a:after {
+  content: "\f105";
+  display: inline-block;
+  float: right;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  padding: 0 0 0 14px;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.biw nav#main-sidebar-nav .sidebar-nav-list > li > a:hover {
+  text-decoration: none;
+}
+.biw nav#main-sidebar-nav .sidebar-nav-list > li.parent > a:after {
+  content: "\f107";
+}
+.biw nav#main-sidebar-nav .sidebar-nav-list > li .nesting-menu-wrapper .nesting-menu .lvl-1 {
+  display: none;
+}
+.biw nav#main-sidebar-nav .sidebar-nav-list > li .nesting-menu-wrapper .nesting-menu .lvl-1 > li a {
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+}
+.biw nav#main-sidebar-nav .sidebar-nav-list > li .nesting-menu-wrapper .nesting-menu .lvl-1 > li .lvl-2 {
+  display: none;
+}
+.biw nav#main-sidebar-nav .sidebar-nav-list > li .nesting-menu-wrapper .nesting-menu .lvl-1 > li .lvl-2 a {
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
 }
