--- a/css/layout/footer.less
+++ b/css/layout/footer.less
@@ -62,7 +62,42 @@ footer#main-footer{
   }
 
   #footer-map{
+    background: url('/images/map.png') center no-repeat;
     height: 60vh;
+    overflow: hidden;
+    /*margin-left: -15px;
+    margin-right: -15px;*/
     width: 100%;
+
+    #footer-map-overlay{
+      background: fadeOut(@main, 50%);
+      padding-top: 25vh;
+      height: 60vh;
+      width: 100%;
+    }
+
+    #footer-map-popup{
+      background: #fff;
+      color: #333;
+      font-size: 1.6rem;
+      margin: 0 auto;
+      padding: 20px;
+      width: 300px;
+
+      .lh-box-shadow(0 0 40px rgba(0,0,0,.5));
+
+      &:before{
+        content: '';
+        display: block;
+        position: absolute;
+        margin: -20px 0 0 -44px;
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 46px 24px 46px 0;
+        border-color: transparent #ffffff transparent transparent;
+        -webkit-transform:rotate(360deg)
+      }
+    }
   }
 }
