--- a/css/index/news.less
+++ b/css/index/news.less
@@ -17,6 +17,10 @@
     vertical-align: baseline;
     width: 100%;
 
+    @media (max-width: 700px) {
+      display: block;
+    }
+
     .left{
       background-image: url("/images/mileline.png");
       background-position: top;
@@ -167,6 +171,63 @@
       clear: both;
       font-size:0;
       overflow:hidden;
+    }
+
+    &.first{
+      .left{
+        padding: 0 10px 10px 10px;
+
+        .date-wrapper{
+          background: #fff;
+          padding-top: 10px;
+        }
+      }
+    }
+
+    &.more-news{
+      &:hover{
+        background: mix(@main, #fff, 15%);
+      }
+
+      .left{
+        padding: 0;
+
+        .more-wrapper{
+          background: #fff;
+          padding: 0 10px 0 10px;
+          width: 50%;
+        }
+      }
+
+      .content{
+        padding: 30px 20px;
+      }
+
+      @media (max-width: 700px) {
+        background: @main;
+        border: 1px solid darken(@main, 25%);
+        color: #fff;
+        text-shadow: 0 1px 0 darken(@main, 25%);
+        margin-top: 15px;
+
+        .lh-box-shadow(inset 0 1px mix(@main, #fff, 75%));
+        .lh-border-radius(6px);
+
+        &:hover{
+          color: @main;
+          text-shadow: none;
+          text-decoration: none;
+
+          .lh-box-shadow(inset 0 1px #fff);
+        }
+
+        .content {
+          display: block;
+          text-align: center;
+          padding: 10px;
+          width: 100%;
+        }
+      }
     }
   }
 }
