--- a/css/article/top.less
+++ b/css/article/top.less
@@ -16,5 +16,10 @@
     display: flex;
     align-items: center;
     height: 62px;
+
+    @media (max-width: 768px) {
+      font-size: 1rem;
+      padding: 10px 20px;
+    }
   }
 }
