--- a/css/index.less
+++ b/css/index.less
@@ -5,3 +5,10 @@
 @import "index/story";
 @import "index/featured-links";
 @import "index/news";
+
+.biw{
+  font-size: 20px;
+  font-weight: bold !important;
+
+  @import "index/biw/total";
+}
