--- a/css/article/article.css
+++ b/css/article/article.css
@@ -8,3 +8,12 @@
 #article .article p {
   padding: 10px 0;
 }
+@media (max-width: 768px) {
+  #article .article {
+    font-size: 1rem;
+    padding: 20px;
+  }
+  #article .article p {
+    padding: 0;
+  }
+}
