--- a/css/article/article.less
+++ b/css/article/article.less
@@ -9,5 +9,14 @@
     p{
       padding: 10px 0;
     }
+
+    @media (max-width: 768px) {
+      font-size: 1rem;
+      padding: 20px;
+
+      p{
+        padding: 0;
+      }
+    }
   }
 }
