--- a/css/layout/biw/total.less
+++ b/css/layout/biw/total.less
@@ -396,6 +396,36 @@ header#main-header{
     }
   }
 
+  #main-heder-quicklinks{
+    background: #fff;
+    color: #000;
+
+    a{
+      color: #000;
+    }
+
+    .lh-box-shadow(none);
+
+    .link-wrapper {
+      .link {
+        border-right: 1px solid #000;
+        padding: 20px;
+      }
+
+      &:hover {
+        background: #000 !important;
+        color: #fff;
+      }
+    }
+
+    .arrow-continue-wrapper {
+      &:hover {
+        background: #000 !important;
+        color: #fff;
+      }
+    }
+  }
+
   .gradient{
     display: none;
   }
