--- a/css/layout/sidebar.less
+++ b/css/layout/sidebar.less
@@ -13,6 +13,14 @@ aside#sidebar{
     height: 56px;
 
     .lh-box-shadow(inset 0 -3px rgba(0,0,0,.5));
+
+    .fa{
+      padding: 16px 0 17px 0;
+      position: absolute;
+      right: 16px;
+      top: 0;
+      font-size: 1.4rem;
+    }
   }
 
   #main-sidebar-search-box{
@@ -34,6 +42,20 @@ nav#main-sidebar-nav{
         background: #eee;
         border-top: 1px solid lighten(#eee, 10%);
         border-bottom: 1px solid darken(#eee, 10%);
+      }
+
+      &.active{
+        background: transparent;
+        border: none;
+        border-top: 1px solid lighten(#fafafa, 10%);
+
+        a{
+          border-bottom: 1px solid darken(#fafafa, 10%);
+        }
+
+        .nesting-menu-wrapper{
+          display: block;
+        }
       }
 
       & > a{
@@ -64,11 +86,10 @@ nav#main-sidebar-nav{
       }
 
       .nesting-menu-wrapper{
-        //display: none;
+        display: none;
 
         .nesting-menu{
           .lvl-1{
-            display: none;
 
             & > li{
               a{
